re-encrypt secrets for @Bettelstab

--- a/infrastructure/helmfile/secrets/authentik.yaml
+++ b/infrastructure/helmfile/secrets/authentik.yaml
@@ -14,20 +14,29 @@ sops:
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpblZxcTlwb2ZBdldxUUxR
-            T0R4RGNKWkdUSkxKWXBybTM0UHVVeGV4WEdVCitiRDcrSlNnbUR3TU9ySW4wbVRm
-            N0hBekkyTHNFZy9ORlBqb0dDNmNkL0kKLS0tIHBMbUJES3BhUEd1SHVnNVowRDlO
-            NmRoZEV2aXJXTDI0dGZHTXMwRk0rOUUKhI68Nu0sho4L48Q9rbMqeT8XCaydKT/9
-            sFYCwKBBx4s57q3K3nnFhNrq1KwwBNpuQLz5hNu9sQggY+x0Ov9I9A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoYlBMTkNmRms2Ym5nRTVC
+            T2c4YjMrdW91b1gweW5YSFpSMko5RHMrUmpJCkQ1MmNoSk94RnUzcUsyQzZwK3h4
+            MFJJTUxrbmg4eFA2QzVyNW9YUDFLTjgKLS0tIENBNURWTEhkWlNUQ2xrYk90WFBs
+            Rk5lVkVTM2VWNkRLQmtpekpsREFiYkkKwj6W4ZiUkMBzCg8yH7g/7oYQfnC6nigY
+            ciJfFSxqCavnU0alUMIaIulkjO5byVSDnDI1Y4+oskYyKsDzYaTnGQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBINGRIY3o1T2ZlaUVYbFpp
-            bWpZeUhmZ3oyemkvMFp1a1JMbVNETHhPL1ZJClFiUCtCRUg0WU5kL0UvUWt2MWUw
-            S3BRYWQrcy9jKyt2YjM3ckdPcGVlUTQKLS0tIEpXNzMveHlpU25yWUtOc2tFZGRa
-            YnJ2SVhodlhYVEtVUk82Rm82V09CRjgKzNJzT4GS3S/PEc/aaYhAW1Ywd3U0J2Xw
-            +WFRZCf+cR9hhPtZ+KyKEp+JTPxL1r9ss1tmVDyNnSOdY4LTcraVWQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6QlJRcHpZbDI2ZnlSaGVn
+            RTBvdXpSMDE3TTZuakROYXpQVjVybzNOTVJVClV6U0U5NnVvbEhFTW42d09vVUJ4
+            dS83WWZxN3RPanF3NzcrcjV1Q0srRDAKLS0tIHBuYW5veXI4MkxIQm5Hclg4Z0or
+            SnJPcm84UUtCYWxFZSs2NDlnM3ljajQKjfJ9f95CerTuCNd8xGqaFtgNPRny+9c/
+            hGVlfsVWiTZY5GAaESamgu+dXvDbNyR6H2BN4xjbH0ff8inBkOCCAw==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmaGcxS3pOREN0M3RVK1Zy
+            cVpNYlNQQ1RZM2tiQVEwQ0M2Qyt2OERhU0IwCjJPbmNvU1FiV0M4NktWWHFuckFX
+            aHUzWGh3QXY4RmY5UGxoSUdlbm5EY1UKLS0tIGF2STBrU2pOVUtxTUJnTFpsN2tJ
+            N3h1MTFTMzZqSXQ4bXZIUEd4UlY1NTQKZ8TDwNtjHsWBXR5YuXWw+OCA6T8v12Fr
+            Tp9vz0wzqpgDP9USBB1QHGuPSNRmtZc6/rGxy1S/TWMsvC8mj7oDGw==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T14:36:33Z"
     mac: ENC[AES256_GCM,data:2UiO3pJoQITr1Ga6cofEuTIbu1VYe5oS22i1CQVUaNuK6f3PDe3nGr50PTbu/q50Aj65ggLhkOjcsUZj+QiBE2dLX5I7JdOqzrXspDCmr/khUudaqep7DCHET+Ah7Xp1tzZGacZUONDL4wnLFynuPlKbt/P7OEqQn1W5szTu/vU=,iv:0VuKhtrksor0BA4aMkaVL/yGyN9MMAnMAdBC7B862pI=,tag:DYdQfkW/ocB44a+lSAor8w==,type:str]
