--- a/infrastructure/helmfile/secrets/mariadb.yaml
+++ b/infrastructure/helmfile/secrets/mariadb.yaml
@@ -12,20 +12,29 @@ sops:
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1M2o3SzlVMVJyVmthZVBS
-            MmlySStqNzRoQlBvdWthKzRGZUluWGxHSFY0CkY0RVBPcVo0TXdxV3lVeTV6bUFu
-            OWg3K0pvQ3lrYTdlRDYyd3dmd0pEU1kKLS0tIHlNMGZFaVB5Y21lZXUyOXAxOE9T
-            M1FOQmc3R0JYbE1ueko2bHByL1NPZTAK7u5uz2emisW+atQPQJTeLwEz33RlZyM5
-            aAKHxjfZ4RLeqnY1B9LEUG4e2DErm0X9npnQqYCSEWhvek6V1uts/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5QzNiVTBZQ0tVY2RFNUgr
+            WkE3UmRIczFGVS84VkwybnV6ZVRUdlVCVlE4CnFSUWlEaExPcFpMWmVlMUtEZmZF
+            S2NCV1Avd3NPckxnRjh4UG4wdnlmNDAKLS0tIFJDcHBLL0ZFOGk0dVQva1M0cEl6
+            Wk8zVUFZR2xzZlI3TXNhbk4rWTVkNkUKbmNUBuR41pdFPcLalEnIEEPbIUR6sdgv
+            DXOOA27nUltmcZOfleO7QdrmtpR58yB+I0x2xgGvNmg3n1roIGGV1Q==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOZ3N1MHNoTEx0SnVQNVdx
-            MG9XSnlQdXgwSkd4dWJDRG54TXdGSkNjdTNFClk0OG1HWjZtVXZVd1Bya2ZPeDh0
-            cTNHaDE3QUZOSytlaEtiS1BTNEQrWUkKLS0tIEY1OTdmREJnZGErWFl3UXYyb1Jm
-            MFNRbDVTcE1rUmFFNUNSTnFQaFZMSE0KhZas/mpPEUaABmuNZ5Avv8hU762Wozwm
-            EP/G70RpRtukYP463B9TcHigdcI9rLlXtEBC5GWXPYYguKKxOTXLBg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4bzI2Y1BWMStIVGdjbG9z
+            dkdiQkpmNHJqcGtpamI1M28zL3hSUU91dXhRClFUNThtYkJGZFAxY1o1QzVRT1lR
+            VCtjWDMzMXF4eFY4cWVXakdmMEd5SmsKLS0tIDF3Zm9Gckxzd3haRzZVeVJLV1ZP
+            b1BiMzVQNDEvcDAyZVZKR29hMTNMQ0EKOZjl9f8OFZN9h4f2Z4DlexxAF8hMixgm
+            IWC+gaD9tAh/fIjN9fcB+h4sixc/t65v20VN6WQBegG7CsGuqeyP1Q==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzTFRYU1V6ZlFtRG12Zi9x
+            ckxvUTFSN2RObjQzQ09WV21yWlB5RUxWeGpZCjEvMXZIbC82amRGWC9GalRKc3Bk
+            ak5mcG5FVWpIN2hZYXdRMVE0TXZ6eEkKLS0tIDgrRFQrZmhLSWRqZ1Q0U2ZvTDd6
+            aFNxSDhhMit6S0F3bGU2RmM0ZU5Tbm8K19VzBqYYOZwS/UsmPquXSCII/h1MoeKt
+            3I+lZIvdZJTJF24jq9lWmLHM5aEZZd2plJXhtN49nlF3yThbXcLIJA==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T15:19:54Z"
     mac: ENC[AES256_GCM,data:JXQidrSRvs2ZjVj79CiSSoscU4Xx1/GhfIC4WGz8uGmmAiUi2chD+MoafpGFJSlJoLeU05lbwkMnpYRkyeNhTKelyEAOxlewCFb3ysUbStHSrvNXPM0hEddoxYA6B3pciwiL8yH3PaiVhxIyRd7XQAPTdKcqyRVisZjoxI0O0Bs=,iv:m6X4veK/d/DypXVwNBDbx5Ce8fdc36Ew2eoWhfh20AI=,tag:RkA2FKxNiz8qjaX8h30meg==,type:str]
