--- a/infrastructure/helmfile/secrets/dreammall.yaml
+++ b/infrastructure/helmfile/secrets/dreammall.yaml
@@ -17,20 +17,29 @@ sops:
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1MVdzL2JaRXpKMFlQVkhj
-            U0xYcW9YWDNOOWJ5eWF3YlpzOUdvUlpnWlI0CktqbUIrUFRqSElCNTRkZ3QydGNo
-            WDhTN0c4ZHVIcXFwYmdCOHVDcEUwOFEKLS0tIE1UOEx2akF1RUtTM0ZRWTdmeFVr
-            eFpWRUJnR2ZwTUJvZzkralZWamtmYUkKVKw8JRqbGhoKgNLpmiwePw085MT2O6Aa
-            6c2wJ5+r2vg1gcKtxl9pxymvugkl9h34udOlU9Go62QpOKZKoumw8A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPM0tFYnhZYzZwYWdycFc0
+            TVZFWVFhbEE2SUY5Q0NqczRrSmlXZnJtL2hzCkJ1aGNQV1dSbFdQeFNjcXM4ZjBM
+            RVpwRXZHbGF6RWVNbHNzUzladVNFOEUKLS0tIFo3MFZZSS9Gb1ZKVDlMbXZnU2FZ
+            OHR6eHpNd2lOcytHTFByTWlqTE5EMHMKx9Vy6u2vTpf2Ohl9aesRkWsjPx5niiCM
+            ok5N6DwXoBB/+FY2MqK17w/BW5MhMgvzslad2BXm1bmnDLCLZSdovw==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFbnlucTgxdVljRlFQcVdi
-            NzArTW5zSWt1Zm9aOHRRc1BmZ1ZvcFl6OVVJCnNyYUtvcVdOcTZTZDVhSTk5S0VW
-            eDkyZENzNGpwaXNEUkZ6NjRCdWlIem8KLS0tIHgvOG9ZN3p3amVKS2c3Tnd5d3c0
-            ZVJoZUdhM0M4czVLaU5wM2gwYjdDTkkK4FwyzHcHliuoLKyI+/1bHeRb/dU68CIl
-            rQu6BM1ZqW0+Y6vZDCYJcS2T5pV1FEK1GAAPrS+WQ3UXjXtBnecBmw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBueE4veDdXTEM3b3hqSUNa
+            Qm1NMDRyUkJnN3VGTmxqSm82eUVkNjZzYmhJCm9FMnpwajdEZDJoRHJoSlZ0UHlr
+            RU5QdWNDYzFlR3Yyc0JrV2VONDFQNlkKLS0tIDhyc2Y0Y2IxTWhURnhBV29RcmZ4
+            TEVlMXdmVENLdEZFQnV1ZzJXQ0Q0VDAK2JU+jH4N6mfcLQoNGOTpZvRJbtgZcRYC
+            XfxvEHO9FVBiqA7fmdz5a2mhLxGLihUVoN/xSMKDqu665e4j8vljJw==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDRFRUck5tSzd3THhXWHFL
+            c2RQWndEMFVDTFBWVE80M2xacFUyUVZpeEJ3ClRyejRlRVVITVBmVDY5cVJROG9j
+            TzYzUlhkYXpUbUVpT3orenpUMktkcm8KLS0tIDc5THBEU0dNUkh3RzFoK3VqY0pa
+            NEVhRW43MVRlTExhSk1BcEdFNmlXencKIV4aPhVMERkPZ4GLdSAdAxQ/nkIojrQi
+            Jiry2W9Ark27ed+MEcEJJXVMJ1FvqNFZeoZ0CkwungcLiFyzPDm9WA==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-06T22:08:26Z"
     mac: ENC[AES256_GCM,data:Bn1lO84SuS578s7zusm716C0tyry+zNW/ctA8ueMDDJq7MG0CHdJn8OocKYrp63S2I6Q10jz49rnEezgQV1eM79RYL2hFanG2hz2fJlW8Rio7nJ3IehA7xZbjNQWrviCl8I3rJBt0H1+S5817NTpbKwV1XBgGEsNKZmLX9M7IJA=,iv:nUvj0bwGqGnVdo8Mpf0am8YIhB+4lay/oMqUpX/IdAU=,tag:fxk/020uRW/VpsmoGyWT4A==,type:str]
