re-encrypt for @trinity2701

--- a/infrastructure/helmfile/secrets/authentik.yaml
+++ b/infrastructure/helmfile/secrets/authentik.yaml
@@ -14,29 +14,38 @@ sops:
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoYlBMTkNmRms2Ym5nRTVC
-            T2c4YjMrdW91b1gweW5YSFpSMko5RHMrUmpJCkQ1MmNoSk94RnUzcUsyQzZwK3h4
-            MFJJTUxrbmg4eFA2QzVyNW9YUDFLTjgKLS0tIENBNURWTEhkWlNUQ2xrYk90WFBs
-            Rk5lVkVTM2VWNkRLQmtpekpsREFiYkkKwj6W4ZiUkMBzCg8yH7g/7oYQfnC6nigY
-            ciJfFSxqCavnU0alUMIaIulkjO5byVSDnDI1Y4+oskYyKsDzYaTnGQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhQ3JUSnNuSStJeFB0YmlP
+            dFlqdlFqMTA3bW1PM1J0VHRtTjQ1bzhsRUJNClQveWdrZjVDbXU2Tkp1MDRqK01p
+            TDdyMjUzMHhLZEZXazBxUktzMHRRUU0KLS0tIFRlSWxRVnkwbmxtbUFmOUtaZHlo
+            TnBpM2IxMitPRmd2UFIvSkx5WVlSOW8K/a9Sjk76gRQjWx3XDpy+tBpiPTo34CQ/
+            TbqJ4RLIGt0qusVRfFEJNpIeA58ZOXOJO/5gN8LaC9CaPCRav7HluA==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6QlJRcHpZbDI2ZnlSaGVn
-            RTBvdXpSMDE3TTZuakROYXpQVjVybzNOTVJVClV6U0U5NnVvbEhFTW42d09vVUJ4
-            dS83WWZxN3RPanF3NzcrcjV1Q0srRDAKLS0tIHBuYW5veXI4MkxIQm5Hclg4Z0or
-            SnJPcm84UUtCYWxFZSs2NDlnM3ljajQKjfJ9f95CerTuCNd8xGqaFtgNPRny+9c/
-            hGVlfsVWiTZY5GAaESamgu+dXvDbNyR6H2BN4xjbH0ff8inBkOCCAw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpRUhUY1NoN1BKelhjWkVZ
+            MjFwa0RJSDhueXdWb0ZodGJlN1pLVWEzUkNnCmRWVHpzTXBhclZ6bzlTVjFjMmtC
+            TjRmN2VlQWwzUEFoc1lvZExyaUtWV0EKLS0tIFNlZ1VXdjRBL2R4Mzl3dG9kanRJ
+            cXRneXZNTUw3c1VIbWh4dzBiQ29yNlUKsSH46XI4hBwGeDI3y5ppmHZ0TDMXQN9l
+            qgGSBAEnUBDdp7Ts29epVK21IxcoS8TPw/cqiBKkpJLOW70xsrqgqQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmaGcxS3pOREN0M3RVK1Zy
-            cVpNYlNQQ1RZM2tiQVEwQ0M2Qyt2OERhU0IwCjJPbmNvU1FiV0M4NktWWHFuckFX
-            aHUzWGh3QXY4RmY5UGxoSUdlbm5EY1UKLS0tIGF2STBrU2pOVUtxTUJnTFpsN2tJ
-            N3h1MTFTMzZqSXQ4bXZIUEd4UlY1NTQKZ8TDwNtjHsWBXR5YuXWw+OCA6T8v12Fr
-            Tp9vz0wzqpgDP9USBB1QHGuPSNRmtZc6/rGxy1S/TWMsvC8mj7oDGw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNNU95NWo0c3J5dERxeDBr
+            VHVFYTlwc3c0djkrUnV2UHVncFhCN0l4QlRNCmRsUUxxeXBWTFBtZ0l4RDlERDZ6
+            VjM0VlgvU3VBdFRaNEZ2SGxzRkZSS0kKLS0tIFA0VlF4dXBuVkMzNFFnbTZ3dTdw
+            TVFkYTBrTnVXMStFUGdsWDg4TFFYTkkKb++bZi23t/AzvGi2YexbdffXFCPdAOs0
+            B/Pk0w0luvGGRP91MyjLf0CGhRchpb3j70rgEIh98uhBjr8JQvrOYg==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age15g5mhkcrseuxq923j7vdnmrzq4eh08ujha864k8hc6ncrj5sqfcsqkkyr2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPaWRyZ2ltbFlFWklWRGMx
+            SmtpN1BxeWVaUVdudEtBdzZkajY5SnJTRHdnCm1aNHpHQXJVYUIwNEljQ1IvN2lh
+            QlM3MGJlRnVKTWM3WmxWL0pxc3hRZVUKLS0tIDRoQk42S1pUUVN2cGFKbTRMNzFt
+            Z1hzTEhVVk1VRitNWlpaM1hKcW9hSkUKu+oF64DUww/lDNGfj/bDZUFhPD0jLHJO
+            TfWX11SdzClpYAlRiYuyCGuddV9D0l8WmrAQVJwUCLk2WHOcptqYnw==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T14:36:33Z"
     mac: ENC[AES256_GCM,data:2UiO3pJoQITr1Ga6cofEuTIbu1VYe5oS22i1CQVUaNuK6f3PDe3nGr50PTbu/q50Aj65ggLhkOjcsUZj+QiBE2dLX5I7JdOqzrXspDCmr/khUudaqep7DCHET+Ah7Xp1tzZGacZUONDL4wnLFynuPlKbt/P7OEqQn1W5szTu/vU=,iv:0VuKhtrksor0BA4aMkaVL/yGyN9MMAnMAdBC7B862pI=,tag:DYdQfkW/ocB44a+lSAor8w==,type:str]
