--- a/infrastructure/helmfile/secrets/mariadb.yaml
+++ b/infrastructure/helmfile/secrets/mariadb.yaml
@@ -12,29 +12,38 @@ sops:
         - recipient: age1llp6k66265q3rzqemxpnq0x3562u20989vcjf65fl9s3hjhgcscq6mhnjw
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5QzNiVTBZQ0tVY2RFNUgr
-            WkE3UmRIczFGVS84VkwybnV6ZVRUdlVCVlE4CnFSUWlEaExPcFpMWmVlMUtEZmZF
-            S2NCV1Avd3NPckxnRjh4UG4wdnlmNDAKLS0tIFJDcHBLL0ZFOGk0dVQva1M0cEl6
-            Wk8zVUFZR2xzZlI3TXNhbk4rWTVkNkUKbmNUBuR41pdFPcLalEnIEEPbIUR6sdgv
-            DXOOA27nUltmcZOfleO7QdrmtpR58yB+I0x2xgGvNmg3n1roIGGV1Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIMUtjTUcxS2pZSStLUDJ5
+            eUFuWUsyb2NGNlRNanRsZHU2QlVoZU9wYmdRCkRPUjZBVjJnSG1SeFpXUFJQaVFv
+            UVRQajJWVkRjRE0rMHZVY0xPTDBWWkEKLS0tIHdBakFFZVJFQ2hhT2NOMW1sL2FT
+            R0Z6MkU5MlZuMTBzb1lDUW1ja01oYW8KCWSEiN5E0Sy8AHZKcGgoJFsexrwWoOkh
+            PLRF/VrvORsTpbxDY57jtHiTSUZs3wnlaL0p4sq42bVHQjQBQocJog==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1zycwtk6dkxj6vuqhj9jw7932ythky9p3att6df4z9qasyw8v5dxquejcmp
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4bzI2Y1BWMStIVGdjbG9z
-            dkdiQkpmNHJqcGtpamI1M28zL3hSUU91dXhRClFUNThtYkJGZFAxY1o1QzVRT1lR
-            VCtjWDMzMXF4eFY4cWVXakdmMEd5SmsKLS0tIDF3Zm9Gckxzd3haRzZVeVJLV1ZP
-            b1BiMzVQNDEvcDAyZVZKR29hMTNMQ0EKOZjl9f8OFZN9h4f2Z4DlexxAF8hMixgm
-            IWC+gaD9tAh/fIjN9fcB+h4sixc/t65v20VN6WQBegG7CsGuqeyP1Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrUXVCRzdOUXZYNEJFTGZi
+            bDR1YnpzN016Y09leTZLc2pUWnFoWUtHNEZVCkxmdkxNOTlvT082dThmdXpQYm1I
+            eU1jSk50TzVlVDc2QnpKVXBpWVQ0ZUUKLS0tIDdoVmJIK3M0bWpQVHMrUkg1Mytv
+            bWtadGVwc1EyQy9nYzNXaVZIVzIydzgKkl5gyny+PdxHRrux6X3FEaggwhaWOpQp
+            TJkK74PTk5K28Ab0caBBOGgamdPdm/YoRNlBks66MUSXJHLJa5tqag==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1t0ufylv5xfwhmcamu4gpwtay4wcuyqgzlkht4t04s9qjl8xjks9skxrt02
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzTFRYU1V6ZlFtRG12Zi9x
-            ckxvUTFSN2RObjQzQ09WV21yWlB5RUxWeGpZCjEvMXZIbC82amRGWC9GalRKc3Bk
-            ak5mcG5FVWpIN2hZYXdRMVE0TXZ6eEkKLS0tIDgrRFQrZmhLSWRqZ1Q0U2ZvTDd6
-            aFNxSDhhMit6S0F3bGU2RmM0ZU5Tbm8K19VzBqYYOZwS/UsmPquXSCII/h1MoeKt
-            3I+lZIvdZJTJF24jq9lWmLHM5aEZZd2plJXhtN49nlF3yThbXcLIJA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDODRSUDVtR0tnWEZwWlV4
+            bEpBeUtUNzBtNDduSGpiM0Rvek9nY3BLY3lZCmZuSTZTZ0R2OFdSWUNobHBDanBw
+            aHkrcVJtdTZ0RDBubStwSVYyOWlrbncKLS0tIG90Nld3cFJJTHFjOXhDRHVrTzg5
+            cCtYU1M4OXdmUE1YckVMUkFMem1jaGcKjxhAG+olqHI/cv54h1nyHCrxvipSLpN6
+            GguqxF7H6drZpA/0+uZBLsdVFVqJQIveB3C/HOiP2RmkJkRgMwPB6g==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age15g5mhkcrseuxq923j7vdnmrzq4eh08ujha864k8hc6ncrj5sqfcsqkkyr2
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoL3RydFFqZjFrSE1scmZl
+            TkxMMXU5Zm9PclIyRXFqem1FNDcydjRmeHlNCmk0WDArSDB3Qml4SVVCWHlqN09W
+            S1NwYzlzL2ZUcEtCdjZWZyt2M0NybHcKLS0tIDNFOUVINTlnNDdJcFpxYlZiUE43
+            azdCNG83N3NGa29YcGNpSlpmbnBBVVUKY2EKJIUOojT5/4OzGA5otsvDohFvy5Nn
+            /hf1LEIKTZ1OHef6VTC7rS53ygLkcSxCHm8zKwfIVCPfNgP2r6jQ8g==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2024-08-01T15:19:54Z"
     mac: ENC[AES256_GCM,data:JXQidrSRvs2ZjVj79CiSSoscU4Xx1/GhfIC4WGz8uGmmAiUi2chD+MoafpGFJSlJoLeU05lbwkMnpYRkyeNhTKelyEAOxlewCFb3ysUbStHSrvNXPM0hEddoxYA6B3pciwiL8yH3PaiVhxIyRd7XQAPTdKcqyRVisZjoxI0O0Bs=,iv:m6X4veK/d/DypXVwNBDbx5Ce8fdc36Ew2eoWhfh20AI=,tag:RkA2FKxNiz8qjaX8h30meg==,type:str]
