--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,7 @@
 version: 2
+
 updates:
+
 - package-ecosystem: "github-actions"
   open-pull-requests-limit: 99
   directory: "/"
@@ -9,299 +11,16 @@ updates:
     day: "saturday"
     timezone: "Europe/Berlin"
     time: "03:00"
-- package-ecosystem: npm
-  open-pull-requests-limit: 99
-  directory: "/"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-  groups:
-    remark:
-      applies-to: version-updates
-      patterns:
-        - "remark*"
-    vuepress:
-      applies-to: version-updates
-      patterns:
-        - "*vuepress*"
-- package-ecosystem: docker
-  open-pull-requests-limit: 99
-  directory: "/"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-
-# presenter
-- package-ecosystem: npm
-  open-pull-requests-limit: 99
-  directory: "/presenter"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-  groups:
-    eslint:
-      applies-to: version-updates
-      patterns:
-        - "*eslint*"
-    pinia:
-      applies-to: version-updates
-      patterns:
-        - "*pinia*"
-    react:
-      applies-to: version-updates
-      patterns:
-        - "react*"
-    remark:
-      applies-to: version-updates
-      patterns:
-        - "remark*"
-    sass:
-      applies-to: version-updates
-      patterns:
-        - "sass*"
-    storybook:
-      applies-to: version-updates
-      patterns:
-        - "*storybook*"
-    stylelint:
-      applies-to: version-updates
-      patterns:
-        - "*stylelint*"
-    typescript:
-      applies-to: version-updates
-      patterns:
-        - "ts*"
-        - "*types*"
-    vite:
-      applies-to: version-updates
-      patterns:
-        - "*vite*"
-      exclude-patterns:
-        - "@vuepress/bundler-vite"
-        - "eslint-plugin-vitest"
-        - "vite-plugin-checker"
-    vue:
-      applies-to: version-updates
-      patterns:
-        - "*vue?(/)*"
-      exclude-patterns:
-        - "vuetify"
-        - "*vuepress*"
-        - "vue-tsc"
-    vuepress:
-      applies-to: version-updates
-      patterns:
-        - "*vuepress*"
-- package-ecosystem: docker
-  open-pull-requests-limit: 99
-  directory: "/presenter"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-
-# admin
-- package-ecosystem: npm
-  open-pull-requests-limit: 99
-  directory: "/admin"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-  groups:
-    eslint:
-      applies-to: version-updates
-      patterns:
-        - "*eslint*"
-    pinia:
-      applies-to: version-updates
-      patterns:
-        - "*pinia*"
-    react:
-      applies-to: version-updates
-      patterns:
-        - "react*"
-    remark:
-      applies-to: version-updates
-      patterns:
-        - "remark*"
-    sass:
-      applies-to: version-updates
-      patterns:
-        - "sass*"
-    storybook:
-      applies-to: version-updates
-      patterns:
-        - "*storybook*"
-    stylelint:
-      applies-to: version-updates
-      patterns:
-        - "*stylelint*"
-    typescript:
-      applies-to: version-updates
-      patterns:
-        - "ts*"
-        - "*types*"
-    vite:
-      applies-to: version-updates
-      patterns:
-        - "*vite*"
-      exclude-patterns:
-        - "@vuepress/bundler-vite"
-        - "eslint-plugin-vitest"
-        - "vite-plugin-checker"
-    vue:
-      applies-to: version-updates
-      patterns:
-        - "*vue?(/)*"
-      exclude-patterns:
-        - "vuetify"
-        - "*vuepress*"
-        - "vue-tsc"
-    vuepress:
-      applies-to: version-updates
-      patterns:
-        - "*vuepress*"  
-- package-ecosystem: docker
-  open-pull-requests-limit: 99
-  directory: "/admin"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-
-# frontend
-- package-ecosystem: npm
-  open-pull-requests-limit: 99
-  directory: "/frontend"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-  groups:
-    eslint:
-      applies-to: version-updates
-      patterns:
-        - "*eslint*"
-    pinia:
-      applies-to: version-updates
-      patterns:
-        - "*pinia*"
-    react:
-      applies-to: version-updates
-      patterns:
-        - "react*"
-    remark:
-      applies-to: version-updates
-      patterns:
-        - "remark*"
-    sass:
-      applies-to: version-updates
-      patterns:
-        - "sass*"
-    storybook:
-      applies-to: version-updates
-      patterns:
-        - "*storybook*"
-    stylelint:
-      applies-to: version-updates
-      patterns:
-        - "*stylelint*"
-    typescript:
-      applies-to: version-updates
-      patterns:
-        - "ts*"
-        - "*types*"
-    vite:
-      applies-to: version-updates
-      patterns:
-        - "*vite*"
-      exclude-patterns:
-        - "@vuepress/bundler-vite"
-        - "eslint-plugin-vitest"
-        - "vite-plugin-checker"
-    vue:
-      applies-to: version-updates
-      patterns:
-        - "*vue?(/)*"
-      exclude-patterns:
-        - "vuetify"
-        - "*vuepress*"
-        - "vue-tsc"
-    vuepress:
-      applies-to: version-updates
-      patterns:
-        - "*vuepress*"
-- package-ecosystem: docker
-  open-pull-requests-limit: 99
-  directory: "/frontend"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-
-# backend
-- package-ecosystem: npm
-  open-pull-requests-limit: 99
-  directory: "/backend"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
-  groups:
-    eslint:
-      applies-to: version-updates
-      patterns:
-        - "*eslint*"
-      exclude-patterns:
-        - "eslint-plugin-n"
-        - "eslint"
-    prisma:
-      applies-to: version-updates
-      patterns:
-        - "*prisma*"
-    remark:
-      applies-to: version-updates
-      patterns:
-        - "remark*"
-    vuepress:
-      applies-to: version-updates
-      patterns:
-        - "*vuepress*"
-- package-ecosystem: docker
-  open-pull-requests-limit: 99
-  directory: "/backend"
-  rebase-strategy: "disabled"
-  schedule:
-    interval: weekly
-    day: "saturday"
-    timezone: "Europe/Berlin"
-    time: "03:00"
 
 - package-ecosystem: npm
   open-pull-requests-limit: 99
-  directory: "/tests"
+  directories:
+    - "/"
+    - "/admin"
+    - "/backend"
+    - "/frontend"
+    - "/presenter"
+    - "/tests"
   rebase-strategy: "disabled"
   schedule:
     interval: weekly
@@ -314,6 +33,18 @@ updates:
       patterns:
         - "*cypress*"
         - "*cucumber*"
+    remark:
+      applies-to: version-updates
+      patterns:
+        - "remark*"
+    vuepress:
+      applies-to: version-updates
+      patterns:
+        - "*vuepress*"
+    eslint:
+      applies-to: version-updates
+      patterns:
+        - "*eslint*"
     linting:
       applies-to: version-updates
       patterns:
@@ -323,12 +54,65 @@ updates:
         - "prettier"
       exclude-patterns:
         - "eslint"
+    prisma:
+      applies-to: version-updates
+      patterns:
+        - "*prisma*"
+    pinia:
+      applies-to: version-updates
+      patterns:
+        - "*pinia*"
+    react:
+      applies-to: version-updates
+      patterns:
+        - "react*"
+    sass:
+      applies-to: version-updates
+      patterns:
+        - "sass*"
+    storybook:
+      applies-to: version-updates
+      patterns:
+        - "*storybook*"
+    stylelint:
+      applies-to: version-updates
+      patterns:
+        - "*stylelint*"
     typescript:
       applies-to: version-updates
       patterns:
-        - "typescript"
         - "ts*"
-    vuepress:
+        - "*types*"
+    vite:
       applies-to: version-updates
       patterns:
+        - "*vite*"
+      exclude-patterns:
+        - "@vuepress/bundler-vite"
+        - "eslint-plugin-vitest"
+        - "vite-plugin-checker"
+    vue:
+      applies-to: version-updates
+      patterns:
+        - "*vue?(/)*"
+      exclude-patterns:
+        - "vuetify"
         - "*vuepress*"
+        - "vue-tsc"
+
+- package-ecosystem: docker
+  open-pull-requests-limit: 99
+  directories:
+    - "/"
+    - "/authentik"
+    - "/admin"
+    - "/backend"
+    - "/frontend"
+    - "/presenter"
+  rebase-strategy: "disabled"
+  schedule:
+    interval: weekly
+    day: "saturday"
+    timezone: "Europe/Berlin"
+    time: "03:00"
+
