provide redirect url after a BBB meeting is closed to the own domain, so that it will be rendered in any case

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -9,6 +9,7 @@ DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
 FRONTEND_URL="http://localhost:3000/"
 FRONTEND_INVITE_LINK_URL="${FRONTEND_URL}join-table/"
+FRONTEND_BBB_LOGOUT_URL="${FRONTEND_URL}table-closed/"
 
 BBB_SHARED_SECRET=""
 BBB_URL=""
