This commit should not be merged into master

--- a/presenter/.env.production
+++ b/presenter/.env.production
@@ -1,10 +1,10 @@
 # AUTH
-PUBLIC_ENV__SIGNUP_URI="https://auth.master.git.dreammall.earth/if/flow/dreammallearth-enrollment/"
-PUBLIC_ENV__SIGNIN_URI="https://app.master.git.dreammall.earth/signin"
+PUBLIC_ENV__SIGNUP_URI="https://auth.present-1007-create-own-table-with-settings.git.dreammall.earth/if/flow/dreammallearth-enrollment/"
+PUBLIC_ENV__SIGNIN_URI="https://app.present-1007-create-own-table-with-settings.git.dreammall.earth/signin"
 
 # Endpoints
-PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=https://master.git.dreammall.earth/api/
+PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=https://present-1007-create-own-table-with-settings.git.dreammall.earth/api/
 
 # META
-PUBLIC_ENV__META__BASE_URL="https://master.git.dreammall.earth"
+PUBLIC_ENV__META__BASE_URL="https://present-1007-create-own-table-with-settings.git.dreammall.earth"
 PUBLIC_ENV__META__DEFAULT_AUTHOR="DreamMall Verlag GbR"
